FIX: alignment of header

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,10 @@
   text-align: center;
 }
 
+header {
+  justify-items: start;
+}
+
 #stages {
   margin: 0;
   padding: 0;
